# RMS_2_0

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE  README.md  rms_reporter.cfg  rms_server.cfg  run-clang-format.sh  server.db  todo
common/: CMakeLists.txt
common/include/rms/common/: common_data.h  network_data.h  ram_data.h  request_data.h  response_data.h  rms_config.h  rms_error.h  rms_version_info.h  sys_info_data.h  util.h
common/include/rms_common/: common_data.h  cpu_data.h  http_client.h  network_data.h  ram_data.h  request_client.h  request_data.h  response_data.h  rms_database.h  rms_error.h  rms_version_info.h  sys_info_data.h  util.h
common/linux/include/rms_common/platform/: request_client_vars.h
common/linux/src/: request_client.cpp
common/platform/include/rms/common/platform/: system_files.h
common/platform/linux/src/: system_files.cpp
common/src/: http_client.cpp  request_client.cpp  rms_config.cpp  rms_database.cpp  sys_info_data.cpp  util.cpp
common/thrift/: RMS.thrift
reporter/: CMakeLists.txt
reporter/common/: CMakeLists.txt
reporter/common/include/common/: rms_reporter_client.h
reporter/common/include/common/consumer/: consumer.h  cpu_consumer.h  ram_consumer.h  sys_consumer.h
reporter/common/include/common/reporter/: README.MD  reporter.h
reporter/common/include/rms/reporter/common/: request_client.h  rms_reporter_client.h
reporter/common/include/rms/reporter/common/consumer/: consumer.h  cpu_consumer.h  ping_consumer.h  ram_consumer.h  sys_consumer.h
reporter/common/include/rms/reporter/common/executor/: executor.h
reporter/common/include/rms/reporter/common/reporter/: reporter.h
reporter/common/src/: main.cpp  request_client.cpp  rms_reporter_client.cpp
reporter/common/src/consumer/: README.MD  cpu_consumer.cpp  ping_consumer.cpp  ram_consumer.cpp  sys_consumer.cpp
reporter/common/src/executor/: executor.cpp
reporter/linux/: CMakeLists.txt  isTrue.cpp
reporter/linux/PoC/: a.out  cpu_sensor.c  network_sensor.c  ram_sensor.c  sysinfo_sensor.c  temp_sensor.c  uptime_sensor.c
reporter/linux/include/platform/reporter/: cpu_reporter.h  ram_reporter.h  sys_reporter.h
reporter/linux/include/rms/reporter/platform/executor/: command_executor.h  script_executor.h
reporter/linux/include/rms/reporter/platform/reporter/: cpu_reporter.h  ram_reporter.h  sys_reporter.h
reporter/linux/src/: request_client.cpp
reporter/linux/src/executor/: command_executor.cpp
reporter/linux/src/reporter/: cpu_reporter.cpp  ram_reporter.cpp  sys_reporter.cpp
server/: CMakeLists.txt  tcp_client.py  tcp_server.py
server/include/rms/server/: client_handler.h  request_db_ingestor.h  request_ingestor.h  request_log_ingestor.h  rms_client.h  rms_computer.h  rms_database.h  rms_server.h  rms_terminal.h
server/include/rms/server/database/: rms_database.h  rms_sqlite_database.h
server/include/rms/server/ingestor/: request_db_ingestor.h  request_ingestor.h  request_log_ingestor.h
server/include/server/: client_handler.h  request_ingestor.h  request_log_ingestor.h  rms_terminal.h
server/src/: client_handler.cpp  main.cpp  request_db_ingestor.cpp  request_ingestor.cpp  request_log_ingestor.cpp  rms_client.cpp  rms_computer.cpp  rms_database.cpp  rms_server.cpp  rms_terminal.cpp
server/src/database/: rms_database.cpp  rms_sqlite_database.cpp
server/src/ingestor/: request_db_ingestor.cpp  request_ingestor.cpp  request_log_ingestor.cpp
setup/db/: createTables.sh  rms_2_0_db_design  rms_2_0_db_design.drawio  tables.sql
